preparing to deploy

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
      
 </head>
 <body>
-    <h1>About Xochil</h1>
-    <!-- <img src="https://1drv.ms/u/s!AplMc8VnVcc4iW78_zFYiPk0SeyN" alt="Xochil in a black/white shirt"> -->
-    <!-- <img src="https://by3301files.storage.live.com/y4mPVHfsF7x2jgfz8gksGgVxI4PslM226CKtBsdRQx5yWGp-3NciI0A6z9rDO-hdwASz-WpEnjf-gdApNfHraJYcRyZw9jKLl7qml71N7WUyZ2iD7FJ50jDEKMeY0kIc0qAkaU-UKkDCmb0Br4pOTdzL2mJJ4wAkPRLgbrDdNF-Pt5LMqycPJwYSx6cKi6C80GQq5JR3lSwemMH7sI5Jp5WRQ/profilepicX.JPG" alt="Xochil in a black/white shirt"> -->
+    <h1>Xochil Squaglia</h1>
+    <img src="profilepicX.JPG" alt="photo of Xochil in black and white shirt" width=20% id="profilepic">
     <ol>
         <li>Was Xochil born in Seattle? Yes</li>
         <li>Has Xochil owned her business since 2013? Yes</li>
