--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+     
 </head>
 <body>
+    <h1>Xochil Squaglia</h1>
+    <img src="profilepicX.JPG" alt="photo of Xochil in black and white shirt" width=20% id="profilepic">
+    <ol>
+        <li>Was Xochil born in Seattle? Yes</li>
+        <li>Has Xochil owned her business since 2013? Yes</li>
+        <li>Does Xochil have management experience? Yes</li>
+        <li>Does Xochil love to solve problems? Yes</li>
+        <li>Does Xochil love working and collaborating with others? Yes</li>
+    </ol>
+
+    <h2>Top Ten Distant Lands I Want to Visit</h2>
+    <ol>
+        <li>France</li>
+        <li>Malta</li>
+        <li>New Zealand</li>
+        <li>Iceland</li>
+        <li>Germany</li>
+        <li>Peru</li>
+        <li>Spain</li>
+        <li>Greece</li>
+        <li>Cuba</li>
+        <li>Guatemala</li>
+    </ol>
+<a href="mailto:xochilsquaglia@gmail.com"> Email Me </a>
     
+    <script src="main.js"></script>
 </body>
 </html>
